Initial code fix. Combined the search forms and added an extra filter option - NameOrLocation

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -51,21 +51,22 @@
             <summary>Search your employers</summary>
             <div class="detail-content">
                 <div class="blocklabel-single-container">
-                    <div class="form-group inline clearfix blocklabel-single hide-nojs">
-                        @* ReSharper disable once Html.IdNotResolved *@
-                        <label data-target="name-location-search-panel" for="name-location-search" class="block-label @nameAndLocationSearchSelected">
-                            @Html.RadioButtonFor(model => model.FilterType, EmployerFilterType.NameAndLocation, new {id = "name-location-search", aria_controls = "name-location-search-panel"})
-                            Name or location
-                        </label>
-                        @* ReSharper disable once Html.IdNotResolved *@
-                        <label data-target="edsUrn-search-panel" for="edsUrn-search" class="block-label @edsErnSearchSelected">
-                            @Html.RadioButtonFor(model => model.FilterType, EmployerFilterType.EdsUrn, new {id = "edsUrn-search", aria_controls = "edsUrn-search-panel"})
-                            ERN
-                        </label>
-                    </div>
-
-                    @using (Html.BeginForm(null, null, null, FormMethod.Get, new {@action = Url.RouteUrl(RecruitmentRouteNames.SearchExistingEmployer), @id = "edsUrn-search-form"}))
+                    @using (Html.BeginForm(null, null, null, FormMethod.Get, new { @action = Url.RouteUrl(RecruitmentRouteNames.SearchExistingEmployer), @id = "edsUrn-search-form" }))
                     {
+                        <div class="form-group inline clearfix blocklabel-single hide-nojs">
+                            @* ReSharper disable once Html.IdNotResolved *@
+                            <label data-target="name-location-search-panel" for="name-location-search" class="block-label @nameAndLocationSearchSelected">
+                                @Html.RadioButtonFor(model => model.FilterType, EmployerFilterType.NameOrLocation, new { id = "name-location-search", aria_controls = "name-location-search-panel" })
+                                Name or location
+                            </label>
+                            @* ReSharper disable once Html.IdNotResolved *@
+                            <label data-target="edsUrn-search-panel" for="edsUrn-search" class="block-label @edsErnSearchSelected">
+                                @Html.RadioButtonFor(model => model.FilterType, EmployerFilterType.EdsUrn, new { id = "edsUrn-search", aria_controls = "edsUrn-search-panel" })
+                                ERN
+                            </label>
+                        </div>
+
+
                         @Html.HiddenFor(model => model.ProviderSiteId)
                         @Html.HiddenFor(model => model.VacancyGuid)
                         @Html.HiddenFor(model => model.ComeFromPreview)
@@ -77,10 +78,10 @@
                                 Find employer
                             </button>
                         </div>
-                    }
+                        @*}
 
-                    @using (Html.BeginForm(null, null, null, FormMethod.Get, new {@action = Url.RouteUrl(RecruitmentRouteNames.SearchExistingEmployer), @id = "name-location-search-form"}))
-                    {
+                            @using (Html.BeginForm(null, null, null, FormMethod.Get, new {@action = Url.RouteUrl(RecruitmentRouteNames.SearchExistingEmployer), @id = "name-location-search-form"}))
+                            {*@
                         @Html.HiddenFor(model => model.ProviderSiteId)
                         @Html.HiddenFor(model => model.VacancyGuid)
                         @Html.HiddenFor(model => model.ComeFromPreview)
@@ -115,32 +116,32 @@
                         <col>
                     </colgroup>
                     <tbody>
-                    <tr>
-                        <th>Name</th>
-                        <th>Address</th>
-                        <th>ERN</th>
-                        <th></th>
-                    </tr>
-                    @foreach (var employerResultsViewModel in @Model.EmployerResultsPage.Page)
-                    {
                         <tr>
-                            <th>
-                                <h4 class="bold-small">@employerResultsViewModel.EmployerName</h4>
-                            </th>
-                            <td>
-                                @employerResultsViewModel.Address.AddressLine1
-                                @if (!string.IsNullOrWhiteSpace(@employerResultsViewModel.Address.AddressLine2))
-                                {
-                                    <br/>@employerResultsViewModel.Address.AddressLine2
-                                }
-                                <br/>@employerResultsViewModel.Address.AddressLine4 @employerResultsViewModel.Address.Postcode
-                            </td>
-                            <td>@employerResultsViewModel.EdsUrn</td>
-                            <td>
-                                <a href="@Url.RouteUrl(RecruitmentRouteNames.ConfirmEmployerSelection, new {providerSiteId = Model.ProviderSiteId, edsUrn = employerResultsViewModel.EdsUrn, vacancyGuid = vacancyGuidValue, comeFromPreview = Model.ComeFromPreview})">Select employer</a>
-                            </td>
+                            <th>Name</th>
+                            <th>Address</th>
+                            <th>ERN</th>
+                            <th></th>
                         </tr>
-                    }
+                        @foreach (var employerResultsViewModel in @Model.EmployerResultsPage.Page)
+                        {
+                            <tr>
+                                <th>
+                                    <h4 class="bold-small">@employerResultsViewModel.EmployerName</h4>
+                                </th>
+                                <td>
+                                    @employerResultsViewModel.Address.AddressLine1
+                                    @if (!string.IsNullOrWhiteSpace(@employerResultsViewModel.Address.AddressLine2))
+                                    {
+                                        <br />@employerResultsViewModel.Address.AddressLine2
+                                    }
+                                    <br />@employerResultsViewModel.Address.AddressLine4 @employerResultsViewModel.Address.Postcode
+                                </td>
+                                <td>@employerResultsViewModel.EdsUrn</td>
+                                <td>
+                                    <a href="@Url.RouteUrl(RecruitmentRouteNames.ConfirmEmployerSelection, new {providerSiteId = Model.ProviderSiteId, edsUrn = employerResultsViewModel.EdsUrn, vacancyGuid = vacancyGuidValue, comeFromPreview = Model.ComeFromPreview})">Select employer</a>
+                                </td>
+                            </tr>
+                        }
                     </tbody>
                 </table>
             </div>
@@ -177,7 +178,7 @@
                 var pageLink = Url.RouteUrl(RecruitmentRouteNames.SearchExistingEmployer, new EmployerSearchViewModel(Model).RouteValues) + "&EmployerResultsPage.CurrentPage=" + (i + 1);
 
             <a href="@pageLink" style="font-weight: @(Model.EmployerResultsPage.CurrentPage == i ? "bold" : "normal")">@i</a>
-                <span>&nbsp;</span>
+            <span>&nbsp;</span>
         }
 
     </div>
