--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ProviderSite.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ProviderSite.cshtml
@@ -19,6 +19,7 @@
     <div class="form-group">
         <p>
             <ul>
+                <li>ID: @Model.ProviderSiteId</li>
                 <li>EDSURN: @Model.EdsUrn</li>
                 <li>Full name: @Model.FullName</li>
                 <li>Trading Name: @Model.TradingName</li>
