--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ProviderSites.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ProviderSites.cshtml
@@ -13,6 +13,7 @@
 
     <div class="form-group">
 
+        @Html.FormTextFor(m => m.SearchViewModel.Id, controlHtmlAttributes: new {type = "tel", size = 8})
         @Html.FormTextFor(m => m.SearchViewModel.EdsUrn, controlHtmlAttributes: new {type = "tel", size = 9, autofocus = "autofocus"})
         @Html.FormTextFor(m => m.SearchViewModel.Name, controlHtmlAttributes: new {type = "text"})
 
@@ -32,12 +33,16 @@
                         <col>
                         <col>
                         <col>
+                        <col>
+                        <col>
                     </colgroup>
                     <thead>
                         <tr>
+                            <th>ID</th>
                             <th>EDSURN</th>
                             <th>Full Name</th>
                             <th>Trading Name</th>
+                            <th>Location</th>
                             <th>Relationship Count</th>
                             <th></th>
                         </tr>
@@ -46,9 +51,11 @@
                         @foreach (var providerSite in Model.ProviderSites)
                         {
                             <tr>
+                                <td>@providerSite.ProviderSiteId</td>
                                 <td>@providerSite.EdsUrn</td>
                                 <td>@providerSite.FullName</td>
                                 <td>@providerSite.TradingName</td>
+                                <td>@providerSite.Address.Town</td>
                                 <td>@providerSite.ProviderSiteRelationships.Count</td>
                                 <td>@Html.RouteLink("View", ManagementRouteNames.AdminViewProviderSite, new { providerSite.ProviderSiteId })</td>
                             </tr>
