--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Provider.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Provider.cshtml
@@ -1,7 +1,7 @@
 ﻿@using SFA.Apprenticeships.Web.Manage.Constants
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Provider.ProviderViewModel
 @{
-    ViewBag.Title = "Providers";
+    ViewBag.Title = "Provider";
 }
 
 <h1 id="heading" class="heading-xlarge">Provider</h1>
