RA-405: Implementation down to repository

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Index.cshtml
@@ -8,4 +8,5 @@
 <ul>
     <li>@Html.RouteLink("Manage Providers", ManagementRouteNames.AdminProviders)</li>
     <li>@Html.RouteLink("Manage Provider Sites", ManagementRouteNames.AdminProviderSites)</li>
+    <li>@Html.RouteLink("Manage API Users", ManagementRouteNames.AdminApiUsers)</li>
 </ul>
