RA-405: View API user details

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ApiUser.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ApiUser.cshtml
@@ -12,6 +12,7 @@
     <ul>
         <li>External System ID (Username): @Model.ExternalSystemId</li>
         <li>Company ID: @Model.CompanyId</li>
+        <li>Company Name: @Model.CompanyName</li>
         <li>Business Category: @Model.BusinessCategory</li>
         <li>Employee Type: @Model.EmployeeType</li>
         <li>Authorised API Endpoints: @string.Join(", ", Model.AuthorisedApiEndpoints)</li>
