RA-405: ApiEntpointViewModel, converters and unit tests

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ApiUser.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ApiUser.cshtml
@@ -15,6 +15,6 @@
         <li>Company Name: @Model.CompanyName</li>
         <li>Business Category: @Model.BusinessCategory</li>
         <li>Employee Type: @Model.EmployeeType</li>
-        <li>Authorised API Endpoints: @string.Join(", ", Model.AuthorisedApiEndpoints)</li>
+        <li>Authorised API Endpoints: @Model.AuthorisedApiEndpoints</li>
     </ul>
 </p>
