--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ChangeUkprn.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ChangeUkprn.cshtml
@@ -1,5 +1,5 @@
 ﻿@using SFA.Apprenticeships.Web.Recruit.Constants
-@model SFA.Apprenticeships.Web.Recruit.ViewModels.Admin.ChangeUkprnViewModel
+@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Admin.ChangeUkprnViewModel
 
 @{
     ViewBag.Title = "Change UKPRN";
