--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ConfirmVacancies.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ConfirmVacancies.cshtml
@@ -1,31 +1,16 @@
 ﻿@using SFA.Apprenticeships.Web.Recruit.Constants
-@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Admin.TransferVacanciesViewModel 
+@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Admin.TransferVacanciesResultsViewModel
 
 @{
-    ViewBag.Title = "Get Vacancies Details";
+    ViewBag.Title = "Confirm Vacancies";
 }
 
 <h1 id="heading" class="heading-xlarge">Transfer Vacancies</h1>
 
-@using (Html.BeginRouteForm(RecruitmentRouteNames.TransferVacancies))
-{
-    @Html.Partial("ValidationSummary", ViewData.ModelState)
-    <div class="form-group">
-        <fieldset class="form-group inline-fixed">
-            @Html.FormTextFor(m => m.VacancyReferenceNumbers,
-                controlHtmlAttributes: new { @class = "form-control-medium", type = "text" })
-        </fieldset>
-
-        <div class="form-group">
-            <button id="confirm-vacancy-details" type="submit" class="button">
-                Confirm Details
-            </button>
-            @Html.ActionLink("Cancel", "TransferVacancies", "Admin")
-        </div>
-    </div>
-
-    @*if (Model != null && Model.VacanciesToBeTransferredVm != null && Model.VacanciesToBeTransferredVm.Any())
+@using (Html.BeginRouteForm(RecruitmentRouteNames.ConfirmVacancies))
     {
+        if (Model != null && Model.VacanciesToBeTransferredVm!=null && Model.VacanciesToBeTransferredVm.Any())
+        {
         <p>Select vacancies you need to transfer</p>
         <div class="grid-wrapper">
             <div class="grid grid-1-1">
@@ -47,13 +32,11 @@
                     </thead>
                     <tbody>
                         @foreach (var viewModel in Model.VacanciesToBeTransferredVm)
-                        {
+{
                             <tr>
                                 <td>@Html.CheckBoxFor(x => viewModel.Selected)</td>
-                                <td>
+                                <td>@viewModel.VacancyReferenceNumber </td>
                                     @Html.Hidden("VacancyReferenceNumber", viewModel.VacancyReferenceNumber)
-                                    @viewModel.VacancyReferenceNumber
-                                </td>                                    
                                 <td>@viewModel.ProviderName </td>
                                 <td>@viewModel.ProviderSiteName </td>
                             </tr>
@@ -62,10 +45,11 @@
                 </table>
             </div>
         </div>
-        <div class="form-group">            
-            <div class="form-group">
-                <button id="add-provider-site-relationship-button" type="submit" class="button" name="ChooseProviderAction" value="ChooseProvider">Choose Provider</button>
-            </div>            
+        <div class="form-group">
+           <div class="form-group">
+               <button id="add-provider-site-relationship-button" type="submit" class="button" name="ChooseProviderAction" 
+                       value="ChooseProvider">Choose Provider</button>
+            </div>           
         </div>
-    }*@
+    }
 }
