--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/CreateProviderSite.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/CreateProviderSite.cshtml
@@ -1,7 +1,7 @@
 ﻿@using SFA.Apprenticeships.Web.Manage.Constants
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Provider.ProviderSiteViewModel
 @{
-    ViewBag.Title = "Providers";
+    ViewBag.Title = "New Provider Site";
 }
 
 <h1 id="heading" class="heading-xlarge">New Provider Site</h1>
