--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/CreateApiUser.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/CreateApiUser.cshtml
@@ -15,9 +15,20 @@
 
     <div class="form-group">
 
-        @Html.FormTextFor(m => m.ExternalSystemId, controlHtmlAttributes: new { type = "text", autofocus = "autofocus" })
-        @Html.FormTextFor(m => m.Password, controlHtmlAttributes: new { type = "text" })
         @Html.FormTextFor(m => m.CompanyId, controlHtmlAttributes: new { type = "tel", size = 9 })
+
+        <h2 class="heading-medium">Authorised API Endpoints</h2>
+
+        @for (int i = 0; i < Model.ApiEndpoints.Count; i++)
+        {
+            var apiEndpoint = Model.ApiEndpoints[i];
+
+            <div class="form-group">
+                @Html.Label("ApiEndpoints[" + i + "].Authorised", apiEndpoint.Endpoint.ToString())
+                @Html.Hidden("ApiEndpoints[" + i + "].Endpoint", apiEndpoint.Endpoint)
+                @Html.CheckBox("ApiEndpoints[" + i + "].Authorised", apiEndpoint.Authorised)
+            </div>
+        }
 
         <div class="form-group">
             <button id="add-api-user-button" type="submit" class="button" name="CreateApiUserAction" value="CreateApiUser">Add API User</button>
