ra-339: Get the providerid and providersiteid for vacancy transfer.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ChooseProvider.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ChooseProvider.cshtml
@@ -7,7 +7,7 @@
 
 <h1 id="heading" class="heading-xlarge">Choose Provider</h1>
 
-@using (Html.BeginRouteForm(RecruitmentRouteNames.ChooseProvider))
+@using (Html.BeginRouteForm(RecruitmentRouteNames.SearchProvider))
 {
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
