--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/Provider.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/Provider.cshtml
@@ -66,7 +66,7 @@
                             @providerSiteRelationship.ProviderSiteRelationshipType
                         }
                     </td>
-                    <td>@Html.RouteLink("Select ProviderSite", RecruitmentRouteNames.ManageVacanciesTransfers, new { providerSite.ProviderSiteId, Model.ProviderId })</td>
+                    <td>@Html.RouteLink("Select ProviderSite", RecruitmentRouteNames.ManageVacanciesTransfers, new { providerSite.ProviderSiteId, Model.ProviderId,Model.VacanciesReferenceNumbers })</td>
                     <td></td>
                 </tr>
             }
