--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ConfirmVacancies.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ConfirmVacancies.cshtml
@@ -20,24 +20,28 @@
                         <col>
                         <col>
                         <col>
+                        <col>
+                        <col>
                     </colgroup>
                     <thead>
                         <tr>
-                            @*<th>Select</th>*@
                             <th>Vacancy Reference Number</th>
+                            <th>Vacancy Title</th>
                             <th>Provider Name</th>
-                            <th>ProviderSite Name</th>
+                            <th>Provider Site Name</th>
+                            @*<th>Employer Name</th>*@
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var viewModel in Model.VacanciesToBeTransferredVm)
                         {
                             <tr>
-                                @*<td>@Html.CheckBoxFor(x => viewModel.Selected)</td>*@
                                 <td>@viewModel.VacancyReferenceNumber </td>
+                                <td>@viewModel.VacancyTitle</td>
                                 @Html.Hidden("VacancyReferenceNumber", viewModel.VacancyReferenceNumber)
                                 <td>@viewModel.ProviderName </td>
                                 <td>@viewModel.ProviderSiteName </td>
+                                @*<td>@viewModel.EmployerName</td>*@
                             </tr>
                         }
                     </tbody>
